src/objects/PriceBook__c.object
<CustomObject>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PriceBooks</relationshipLabel>
        <relationshipName>PriceBooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>new</fullName>
                </value>
                <value>
                    <fullName>sold</fullName>
                </value>
                <value>
                    <fullName>used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PriceBook</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PriceBook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PriceBooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>